--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.536.0",
+    "motion": "^12.23.12",
     "next": "15.4.5",
     "pdf-lib": "^1.17.1",
     "react": "19.1.0",
