--- a/package.json
+++ b/package.json
@@ -9,22 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.0",
+    "@ai-sdk/react": "^2.0.0",
+    "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-pdf/renderer": "^4.3.0",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "ai": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
+    "drizzle-zod": "^0.8.2",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
-    "next": "15.4.5",
+    "nanoid": "^5.1.5",
+    "next": "^15.4.5",
     "pdf-lib": "^1.17.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "pdf-parse": "^1.1.1",
+    "postcss": "^8.5.6",
+    "postgres": "^3.4.7",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
