--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/google": "^2.0.0",
     "@ai-sdk/openai": "^2.0.0",
     "@ai-sdk/react": "^2.0.0",
+    "@google/generative-ai": "^0.24.1",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-pdf/renderer": "^4.3.0",
