--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@ai-sdk/openai": "^2.0.0",
     "@ai-sdk/react": "^2.0.0",
     "@google/generative-ai": "^0.24.1",
+    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-pdf/renderer": "^4.3.0",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tensorflow-models/pose-detection": "^2.1.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "ai": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,6 +31,7 @@
     "drizzle-zod": "^0.8.2",
     "file-saver": "^2.0.5",
     "googleapis": "^154.1.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
     "nanoid": "^5.1.5",
